integ-tests/tests/snapshots/parser__bad_codepoint.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-escape-value]: 
  ┌─ bad_codepoint:1:9
  │
1 │ foo = "\uD800"
  │         ^^^^ invalid escape value


